# tgfeed

./: .gitignore  Cargo.toml  README.md  Settings.toml.sample
.cargo-husky/hooks/: pre-commit  pre-push
.github/workflows/: build.yaml  deploy.yaml
src/: config.rs  main.rs  utils.rs
src/service/: handlers.rs  mod.rs
tgfeed/: Cargo.toml
tgfeed-ai/: Cargo.toml
tgfeed-ai/src/: config.rs  error.rs  lib.rs
tgfeed-ai/src/claude/: config.rs  mod.rs  models.rs
tgfeed-bot/: Cargo.toml
tgfeed-bot/src/: command.rs  config.rs  handler.rs  lib.rs  rate_limit.rs  response.rs  utils.rs
tgfeed-bot/src/tests/: formatting.rs
tgfeed-common/: Cargo.toml
tgfeed-common/src/: command.rs  event.rs  lib.rs  utils.rs
tgfeed-common/src/tests/: message_entity.rs  mod.rs
tgfeed-monitor/: Cargo.toml
tgfeed-monitor/src/: command.rs  config.rs  error.rs  lib.rs  update.rs  utils.rs
tgfeed-monitor/src/tests/: regex.rs
tgfeed-repo/: Cargo.toml
tgfeed-repo/src/: config.rs  error.rs  lib.rs  message.rs  models.rs  subscription.rs  summarize.rs  user.rs
