[package]
name = "tgfeed"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["tgfeed-bot", "tgfeed-common", "tgfeed-monitor", "tgfeed-repo"]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["signal"] }
tracing = "0.1.41"
thiserror = "2.0.17"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
retrier = "0.2.0"
teloxide = { version = "0.17.0", features = ["macros"] }
grammers-client = { git = "https://github.com/Lonami/grammers.git" }
grammers-session = { git = "https://github.com/Lonami/grammers.git" }
grammers-mtsender = { git = "https://github.com/Lonami/grammers.git" }
grammers-tl-types = { git = "https://github.com/Lonami/grammers.git" }

[workspace.dependencies.tgfeed-repo]
path = "./tgfeed-repo"

[workspace.dependencies.tgfeed-common]
path = "./tgfeed-common"

[workspace.dependencies.tgfeed-monitor]
path = "./tgfeed-monitor"

[dependencies]
anyhow = "1.0.100"
tracing-subscriber = "0.3.20"
config = "0.15.19"
tracing = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tgfeed-repo = { workspace = true }
tgfeed-common = { workspace = true }
tgfeed-monitor = { workspace = true }

[dependencies.tgfeed-bot]
path = "./tgfeed-bot"

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["user-hooks"] }
