[package]
name = "tgfeed-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
teloxide = { workspace = true }
thiserror = { workspace = true }
tgfeed-common = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
retrier = { workspace = true }
governor = "0.10.2"
