[package]
name = "tgfeed-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
grammers-client = { workspace = true }
grammers-session = { workspace = true }
grammers-mtsender = { workspace = true }
tgfeed-repo = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tgfeed-common = { workspace = true }
chrono = { workspace = true }
sqlite = { version = "0.37.0", default-features = false }
