[package]
name = "tgfeed-repo"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
mongodb = "3.4.1"
bson = { version = "2.15", features = ["chrono-0_4"] }
serde = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
